# FilterPy

./: LICENSE  README.md  pyproject.toml
examples/: kf_linear_gaussian_ssm.py  kf_nearly_constant_vm.py  pf_linear_gaussian_ssm.py
filterpy/kf/: base.py  basic.py
filterpy/models/: linear_gaussian_ssm.py  nearly_constant_vm.py
filterpy/pf/: base.py  basic.py
