[tool.poetry]
name = "filterpy"
version = "0.1.0"
description = "A collection of Bayesian filtering methods in Python."
authors = [
    "Matthew Carter <m.j.carter2@liverpool.ac.uk>",
]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.19"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
